[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptochief-crypto-processing-python"
dynamic = ["version"]
description ="Official async Python SDK for the Crypto Chief crypto payment gateway and crypto processing API. Accept crypto payments, send single and mass crypto payouts, sign on-chain transactions and smart-contract calls, manage wallets, convert fiat to crypto, and verify webhooks across Ethereum, BNB Smart Chain, Polygon, Tron, TON, Solana, Bitcoin, XRP and 20+ blockchains. USDT and USDC stablecoin support with int-precise amounts and asyncio/httpx."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Crypto Chief" }]
requires-python = ">=3.10"
keywords = [
    "crypto",
    "cryptocurrency",
    "crypto-payments",
    "accept-crypto-payments",
    "crypto-payment-gateway",
    "payment-gateway",
    "crypto-processing",
    "crypto-processing-api",
    "crypto-payment-api",
    "payments",
    "payment-processing",
    "payout",
    "crypto-payout",
    "mass-payout",
    "batch-payout",
    "crypto-invoice",
    "stablecoin",
    "usdt",
    "usdc",
    "erc20",
    "trc20",
    "bep20",
    "jetton",
    "web3",
    "blockchain",
    "wallet",
    "webhook",
    "ethereum",
    "bsc",
    "polygon",
    "tron",
    "ton",
    "solana",
    "bitcoin",
    "xrp",
    "litecoin",
    "dogecoin",
    "asyncio",
    "async",
    "sdk",
    "cryptochief",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "cryptography>=41",
    "pytoniq-core>=0.1.36",
    "pycryptodomex>=3.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://crypto-chief.com/processing/"
Documentation = "https://docs-sdk.crypto-chief.com/processing/python"
Repository = "https://github.com/crypto-chiefs/cryptochief-crypto-processing-python"
Issues = "https://github.com/crypto-chiefs/cryptochief-crypto-processing-python/issues"

[tool.hatch.version]
path = "src/cryptochief/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptochief"]

[tool.hatch.build.targets.sdist]
include = ["src/cryptochief", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
